<resources>
    <string name="app_name">Irregulo</string>
    <string name="action_settings">Settings</string>
    <string name="about_text">Copyright © 2019 Pierre-Emmanuel Patry</string>
    <string name="about">About</string>
    <string name="go">Go</string>
    <string name="present_hint">Base form</string>
    <string name="verb_infinitive">Infinitive</string>
    <string name="preterit_hint">Past simple</string>
    <string name="past_participle_hint">Past participle</string>
    <string name="score">Score: 0/0</string>
    <string name="verify_btn">Verify</string>
    <string name="answer">show answer</string>
</resources>
